<resources>
    <string name="app_name">Bundle_Serializable_Parcelable</string>
    <string name="nama">Nama</string>
    <string name="bundle">Bundle</string>
    <string name="tahun_lahir">Tahun Lahir</string>
    <string name="tugas_1_bundle">Tugas 1 Bundle</string>
    <string name="tugas_2_serializable">Tugas 2 Serializable</string>
    <string name="tugas_3_parcelable">Tugas 3 Parcelable</string>
    <string name="save">Save</string>
    <string name="serializable">Serializable</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="my_data">My Data</string>
    <string name="parcelable">Parcelable</string>
</resources>