<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultSerializableActivity"
    android:padding="25dp">

    <TextView
        android:id="@+id/txt_mydata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/my_data"
        android:textSize="30sp"
        />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/txt_mydata"
        android:layout_marginTop="20dp"
        >

        <TableRow>
            <TextView
                android:text="@string/nama"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/getNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/email"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/getEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/phone"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/getPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/address"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/getAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/age"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/getAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>