<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="25dp">

    <Button
        android:id="@+id/filledButtonBundle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tugas_1_bundle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple_200"
        />

    <Button
        android:id="@+id/filledButtonSerializable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tugas_2_serializable"
        app:layout_constraintTop_toBottomOf="@+id/filledButtonBundle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple_200"
        />

    <Button
        android:id="@+id/filledButtonParcelable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tugas_3_parcelable"
        app:layout_constraintTop_toBottomOf="@+id/filledButtonSerializable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple_200"
        />

</androidx.constraintlayout.widget.ConstraintLayout>